styles.css
/* ... */
@media (max-width: 768px) {
  .header__img--wrapper {
    margin-top: 48px;
    width: 100%;
  }

  .section__para {
    font-size: 14px;
    text-align: center;
  }

  .services__wrapper {
    align-items: center;
    justify-content: center;
  }

  .service {
    width: auto;
    max-width: 384px;
  }

  #quality .row,
  #values .row {
    flex-direction: column-reverse;
    align-items: center;
    justify-content: space-between;
  }

  .quality__img--wrapper,
  .quality__description,
  .steps__img--wrapper,
  .steps__wrapper,
  .values__wrapper,
  .testimonials__wrapper,
  .start__title,
  .start__buttons {
    width: auto;
    justify-content: center;
    align-items: center;
    padding: 0;
  }

  .quality__img--wrapper,
  .quality__description,
  .steps__img--wrapper,
  .steps__wrapper,
  .values__wrapper,
  .testimonials__wrapper {
    max-width: 448px;
  }

  .quality__description {
    margin-top: 64px;
  }

  #steps .row,
  #testimonials .row {
    flex-direction: column;
    padding: 0;
  }

  .section__title {
    text-align: center;
  }

  .steps__wrapper,
  .values__wrapper,
  .testimonials__wrapper {
    margin-top: 64px;
  }

  .quality__img--wrapper,
  .steps__img--wrapper,
  .testimonials__img--wrapper {
    width: 65%;
  }

  .step {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-top: 32px;
    width: 100%;
  }

  .step__description {
    margin: 0;
  }

  #values .section__title {
    margin-bottom: 32px;
  }

  .values__img--wrapper {
    width: 80%;
  }

  .value {
    padding: 0;
    text-align: center;
    margin-top: 40px;
  }

  .value__title {
    justify-content: center;
    align-items: center;
  }

  #pricing .section__title {
    padding: 0 24px;
  }

  .plan__btn {
    max-width: 77.5%;
  }

  #testimonials .section__title {
    font-size: 36px;
    margin-bottom: 24px;
  }

  .testimonial__wrapper {
    text-align: center;
  }

  .start__title {
    padding: 0 36px;
  }

  .start__btn {
    padding: 16px 32px;
  }

  footer {
    margin-bottom: -32px;
  }

  .footer__columns {
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;
  }

  .footer__column {
    width: calc(100% / 3);
  }

  .footer__logo {
    margin: 0;
  }

  .footer__bottom {
    flex-direction: column;
    align-items: center;
    margin-bottom: 116px;
  }

  .footer__copyright,
  .footer__socials {
    margin-top: 32px;
  }

  .footer__social--link:first-child {
    margin: 0;
  }
}

@media (max-width: 640px) {
  .container {
    padding: 80px 0;
  }

  .nav__row {
    padding-top: 64px;
  }

  .header__email {
    flex-direction: column;
  }

  .header__email--input {
    padding: 16px 0 16px 32px;
  }

  .header__email--btn {
    position: relative;
    width: 100%;
    padding: 16px 0;
    margin: 16px 0 0;
    line-height: 1.5;
  }

  .header__customer--title {
    font-size: 14px;
  }

  #features .section__title,
  #pricing .section__title {
    font-size: 36px;
    padding: 0;
  }

  .service__row {
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    padding: 32px 8px;
    margin: 0 16px;
  }

  .service__description {
    margin: 16px 0 0 0;
  }

  .service__description--para {
    margin-top: 4px;
  }

  .section__para {
    padding: 0;
  }

  #quality .section__title,
  #steps .section__title,
  #values .section__title {
    font-size: 30px;
  }

  #quality .row,
  #steps .row,
  #values .row,
  #testimonials .row,
  .testimonial__wrapper {
    padding: 0;
  }

  .step {
    margin: 32px 102px 0;
  }

  .steps__img--wrapper,
  .testimonials__img--wrapper {
    width: 80%;
  }

  .values__wrapper {
    justify-content: center;
    align-items: center;
    margin-top: 64px;
  }

  .testimonial__bottom {
    flex-direction: column;
    padding-top: 4px;
    margin-bottom: 134px;
  }

  .testimonial__person {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .testimonial__person--img-mask {
    width: 64px;
  }

  .testimonial__person--img {
    width: 64px;
    height: 64px;
  }

  .testimonial__person--info {
    margin: 8px 0 0 0;
  }

  .testimonial__buttons {
    margin: 32px 0 0 0;
  }

  .testimonial__para {
    margin: 16px 56px 32px;
  }

  .start__title {
    font-size: 24px;
    padding: 0;
  }

  .start__buttons {
    flex-direction: column;
  }

  .start__container {
    padding: 80px 0;
  }

  .start__btn {
    font-size: 14px;
    padding: 12px 24px;
  }

  .start__btn:nth-child(1) {
    margin: 0;
  }

  .start__btn:nth-child(2) {
    margin-top: 16px;
  }

  .footer__columns {
    flex-wrap: nowrap;
    justify-content: center;
  }

  .footer__column {
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0 16px;
    width: auto;
  }

  .footer__copyright {
    font-size: 14px;
  }
}

